# segmentEM

./: CMakeLists.txt  README.md  maskProcess.cxx
src/: imageProcessingLib.h  meanMinMax.cxx  morphologocalClosing.cxx  mrcIO.h  mrcTools.cxx  msaLibs.h
